--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ go:
   - "1.x"
   - "1.9.x"
   - "1.10.x"
+  - "1.11.x"
+  - "1.12.x"
+env:
+  - GO111MODULE="auto"
+  - GO111MODULE="on"
+  - GO111MODULE="off"
