trigger action on PR

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,7 +6,11 @@ on:
     - main
     paths:
     - '**.go'
-
+  pull_request:
+    branches:
+    - main
+    paths:
+    - '**.go'  
 
 jobs:
   build:
