don't run fsracer in action

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -44,6 +44,6 @@ jobs:
       run: make test
 
     - name: Run all tests
-      run: sudo make -C fstests all
+      run: make -C fstests fsx xattrs flock healthcheck
 
 
