--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -15,6 +15,14 @@ on:
     - 'Makefile'
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.29
   build:
     runs-on: ubuntu-latest
     steps:
