add brews in goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,3 +36,10 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+brews:
+  - tap:
+      owner: juicedata
+      name: homebrew-tap
+    folder: Formula
+    homepage: https://github.com/juicedata/juicefs
+    description: JuiceFS is a distributed POSIX file system built on top of Redis and S3
