--- a/sdk/java/pom.xml
+++ b/sdk/java/pom.xml
@@ -55,7 +55,7 @@
 		</plugins>
 		<resources>
 			<resource>
-				<directory>../../libjfs/target</directory>
+				<directory>libjfs/target</directory>
 			</resource>
 		</resources>
 		<testResources>
