--- a/sdk/java/libjfs/Makefile
+++ b/sdk/java/libjfs/Makefile
@@ -7,5 +7,5 @@ target/libjfs.so.gz: libjfs.so
 	mkdir -p target
 	gzip -c libjfs.so > target/libjfs.so.gz
 
-libjfs.so: *.go ../pkg/*/*.go
+libjfs.so: *.go ../../../pkg/*/*.go
 	go build -buildmode=c-shared -ldflags="$(LDFLAGS)" -o libjfs.so .
