--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,7 +11,7 @@ builds:
       - CGO_ENABLED=1
       - CC=o64-clang
       - CXX=o64-clang++
-    ldflags: -s -w -X main.VERSION={{.Version}} -X main.REVISION={{.ShortCommit}} -X main.REVISIONDATE={{.CommitDate}}
+    ldflags: -s -w -X main.version={{.Version}} -X main.revision={{.ShortCommit}} -X main.revisionDate={{.CommitDate}}
     main: ./cmd
     goos:
       - darwin
@@ -20,7 +20,7 @@ builds:
   - id: juicefs-linux-amd64
     env:
       - CGO_ENABLED=1
-    ldflags: -s -w -X main.VERSION={{.Version}} -X main.REVISION={{.ShortCommit}} -X main.REVISIONDATE={{.CommitDate}}
+    ldflags: -s -w -X main.version={{.Version}} -X main.revision={{.ShortCommit}} -X main.revisionDate={{.CommitDate}}
     main: ./cmd
     goos:
       - linux
@@ -30,7 +30,7 @@ builds:
     env:
       - CGO_ENABLED=1
       - CC=aarch64-linux-gnu-gcc
-    ldflags: -s -w -X main.VERSION={{.Version}} -X main.REVISION={{.ShortCommit}} -X main.REVISIONDATE={{.CommitDate}}
+    ldflags: -s -w -X main.version={{.Version}} -X main.revision={{.ShortCommit}} -X main.revisionDate={{.CommitDate}}
     main: ./cmd
     goos:
       - linux
