java-sdk: refactor distcp checksum patch

--- a/sdk/java/pom.xml
+++ b/sdk/java/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.juicefs</groupId>
-	<name>juicefs-hadoop</name>
+	<groupId>io.juicefs</groupId>
+	<name>juicefs-hadoop-ce</name>
 	<description>Hadoop FileSystem implementation for JuiceFS</description>
-	<artifactId>juicefs-hadoop</artifactId>
+	<artifactId>juicefs-hadoop-ce</artifactId>
 	<version>0.9-beta</version>
 	<packaging>jar</packaging>
 	<properties>
