--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,6 +2,7 @@ project_name: juicefs
 env:
   - GO111MODULE=on
   - GOPROXY=https://gocenter.io
+  - PKG=github.com/juicedata/juicefs/pkg/version
 before:
   hooks:
     - go mod download
@@ -11,7 +12,7 @@ builds:
       - CGO_ENABLED=1
       - CC=o64-clang
       - CXX=o64-clang++
-    ldflags: -s -w -X main.version={{.Version}} -X main.revision={{.ShortCommit}} -X main.revisionDate={{.CommitDate}}
+    ldflags: -s -w -X ${PKG}.version={{.Version}} -X ${PKG}.revision={{.ShortCommit}} -X ${PKG}.revisionDate={{.CommitDate}}
     main: ./cmd
     goos:
       - darwin
@@ -20,7 +21,7 @@ builds:
   - id: juicefs-linux-amd64
     env:
       - CGO_ENABLED=1
-    ldflags: -s -w -X main.version={{.Version}} -X main.revision={{.ShortCommit}} -X main.revisionDate={{.CommitDate}}
+    ldflags: -s -w -X ${PKG}.version={{.Version}} -X ${PKG}.revision={{.ShortCommit}} -X ${PKG}.revisionDate={{.CommitDate}}
     main: ./cmd
     goos:
       - linux
@@ -30,7 +31,7 @@ builds:
     env:
       - CGO_ENABLED=1
       - CC=aarch64-linux-gnu-gcc
-    ldflags: -s -w -X main.version={{.Version}} -X main.revision={{.ShortCommit}} -X main.revisionDate={{.CommitDate}}
+    ldflags: -s -w -X ${PKG}.version={{.Version}} -X ${PKG}.revision={{.ShortCommit}} -X ${PKG}.revisionDate={{.CommitDate}}
     main: ./cmd
     goos:
       - linux
