build libjfs for java sdk

--- a/sdk/java/Makefile
+++ b/sdk/java/Makefile
@@ -1,11 +1,11 @@
 all: package
 
-libjfs: ../../libjfs/target/libjfs.so.gz
-	make -C ../libjfs
+libjfs/target/libjfs.so.gz: ../../pkg/*/*.go libjfs/*.go
+	make -C libjfs
 
 compile:
 	mvn compile -B --quiet
 test: libjfs
 	mvn test -B --quiet
-package:
+package: libjfs/target/libjfs.so.gz
 	mvn package -B -Dmaven.test.skip=true --quiet
