--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install: true
 before_script:
   - export GO111MODULE=on
   - make
-  - make juicefs.exe
+  - sudo make juicefs.exe
   - sudo make -C fstests setup
 script:
   - make test
