--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,12 @@ addons:
       - libacl1-dev
       - redis-server
       - attr
+      - gcc-mingw-w64 # for windows
 install: true
 before_script:
   - export GO111MODULE=on
   - make
+  - make juicefs.exe
   - sudo make -C fstests setup
 script:
   - make test
