add build job for Windows and Java SDK

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,6 +6,22 @@ before:
   hooks:
     - go mod download
 builds:
+  - id: juicefs-windows-amd64
+    hooks:
+      pre:
+        - sh -c 'mkdir -p /usr/local/include/winfsp && cp hack/winfsp_headers/* /usr/local/include/winfsp'
+    env:
+      - CC=x86_64-w64-mingw32-gcc
+      - CXX=x86_64-w64-mingw32-g++
+    ldflags: -s -w -X github.com/juicedata/juicefs/pkg/version.version={{.Version}} -X github.com/juicedata/juicefs/pkg/version.revision={{.ShortCommit}} -X github.com/juicedata/juicefs/pkg/version.revisionDate={{.CommitDate}}
+    flags:
+      - -buildmode
+      - exe
+    main: ./cmd
+    goos:
+      - windows
+    goarch:
+      - amd64
   - id: juicefs-darwin-amd64
     env:
       - CC=o64-clang
