--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,6 +30,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '8'
+
+      - name: Cache local Maven repository
+        id: cache-maven
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Build sdk
         run: make -C sdk/java
 
       - name: Upload SDK
