--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,3 +25,31 @@ jobs:
 
       - name: release publish
         run: make release
+
+      - name: Set up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: '8'
+
+      - name: Cache local Maven repository
+        id: cache-maven
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Chown go module cache
+        run: sudo chown -R $USER $HOME/go/pkg/mod
+
+      - name: Build sdk
+        run: make -C sdk/java
+
+      - name: Upload SDK
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            sdk/java/target/juicefs-hadoop-*.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
