--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
       - libacl1-dev
       - redis-server
       - attr
+      - lsof
       - gcc-mingw-w64 # for windows
 install: true
 before_script:
@@ -29,6 +30,10 @@ script:
   - sudo chmod 777 /jfs/tmp
   - sudo `which mvn` test -B
   - sudo `which mvn` package -B -Dmaven.test.skip=true --quiet || sudo `which mvn` package -B -Dmaven.test.skip=true --quiet  
+  - cd ../../
+  - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
+  - sudo ./juicefs gc localhost
+  - sudo ./juicefs fsck localhost
 after_failure:
   - sudo tail -n 100 /var/log/syslog
 notifications:
