--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: xenial
 language: go
 services:
   - mysql
+  - postgresql
 go:
   - "1.14"
 branches:
@@ -22,6 +23,7 @@ install: true
 before_script:
   - export GO111MODULE=on
   - sudo mysql -e "create database dev;"
+  - psql -c 'create database test;' -U postgres
   - make
   - make juicefs.exe
   - make -C sdk/java/libjfs libjfs.dll
