ci: test with mysql and pg in travis (#553)
* test with mysql in travis

* test pg

* don't run unittest in github action

* fix build

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -38,20 +38,16 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install g++-multilib libacl1-dev attr redis-server
+        sudo apt-get install g++-multilib gcc-mingw-w64
 
     - name: Build linux target
-      run: |
-        export GOPATH=$HOME/go
-        make
+      run: GOPATH=$HOME/go make
 
-    - name: Set up for fstests
-      run: sudo make -C fstests setup
+    - name: build lite
+      run: GOPATH=$HOME/go make juicefs.lite
 
-    - name: Unit tests
-      run: make test
+    - name: build windows
+      run: GOPATH=$HOME/go make juicefs.exe
 
-    - name: Run all tests
-      run: make -C fstests fsx xattrs flock healthcheck
-
-
+    - name: build libjfs.dll
+      run: GOPATH=$HOME/go make -C sdk/java/libjfs libjfs.dll
