Use docker build Java SDK in release workflow (#555)
* add docker builder for Java SDK

* add test workflow

* modify workflow name

* use docker builder for sdk in release workflow

* remove GOPROXY

* remove ci-test workflow

--- a/sdk/java/Makefile
+++ b/sdk/java/Makefile
@@ -1,3 +1,5 @@
+GOROOT=$(shell go env GOROOT)
+
 all: package
 
 libjfs/target/libjfs.so.gz: ../../pkg/*/*.go libjfs/*.go
@@ -9,3 +11,9 @@ test: libjfs
 	mvn test -B --quiet
 package: libjfs/target/libjfs.so.gz
 	mvn package -B -Dmaven.test.skip=true
+docker-package:
+	docker run --rm --mount "type=bind,src=$(GOROOT),target=/go" \
+		--mount "type=bind,src=$(HOME)/go,target=/root/go" \
+		--mount "type=bind,src=$(shell pwd)/../../,target=/workspace/juicefs" \
+		--workdir /workspace/juicefs juicedata/sdk-builder \
+		/bin/bash -c 'cd sdk/java && make'
