--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -46,8 +46,8 @@ jobs:
     - name: build lite
       run: GOPATH=$HOME/go make juicefs.lite
 
-    - name: build kv
-      run: GOPATH=$HOME/go make juicefs.kv
+    - name: build tikv
+      run: GOPATH=$HOME/go make juicefs.tikv
 
     - name: build windows
       run: GOPATH=$HOME/go make juicefs.exe
