--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,7 +64,7 @@ jobs:
     #    uses a compiled language
     - name: build
       run: mvn clean install -Dmaven.test.skip=true
-      working-directory: sdk
+      working-directory: sdk/java/
     #- run: |
     #   make bootstrap
     #   make release
