build go with autobuild

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -62,9 +62,12 @@ jobs:
     # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
-    - name: build-go
-      run: make juicefs
-    - name: build-java
+    - if: matrix.language == 'go'
+      name: Autobuild
+      uses: github/codeql-action/autobuild@v1
+
+    - if: matrix.language == 'java'
+      name: build-java
       run: mvn clean install -Dmaven.test.skip=true
       working-directory: sdk/java/
     #- run: |
