--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -30,30 +30,10 @@ jobs:
 
       - name: Run redis
         run:  sudo docker run -d --name redis \
-          -v redis-data:/data \
           -p 6379:6379 \
           --restart unless-stopped \
           redis redis-server --appendonly yes
 
-      - name: Prepare Object Storage
-        run: sudo docker run -d --name minio \
-          -p 9000:9000 \
-          -p 9900:9900 \
-          -v $PWD/minio-data:/data \
-          --restart unless-stopped \
-          minio/minio server /data --console-address ":9900"
-
-      - name: Juicefs format
-        run: juicefs format \
-          --storage minio \
-          --bucket http://127.0.0.1:9000/pics \
-          --access-key minioadmin \
-          --secret-key minioadmin \
-          redis://127.0.0.1:6379/1 \
-          pics
-
-      - name: Juicefs Mount
-        run: sudo juicefs mount -d redis://127.0.0.1:6379/1 /tmp
 
       - name: Start Juicefs Gateway
         run: |
@@ -61,7 +41,7 @@ jobs:
           export MINIO_ROOT_PASSWORD=minadmin
           juicefs gateway redis://localhost:6379 localhost:8000
 
-      - name: Prepare S3Test
+      - name: S3Test
         run: |
           git clone https://github.com/ceph/s3-tests.git
           sudo apt-get install python-virtualenv
