--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -29,10 +29,7 @@ jobs:
         run: make juicefs
 
       - name: Run redis
-        run:  sudo docker run -d --name redis \
-          -p 6379:6379 \
-          --restart unless-stopped \
-          redis redis-server --appendonly yes
+        run:  sudo docker run -d -p 6379:6379 redis redis-server
 
 
       - name: Start Juicefs Gateway
