--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -52,11 +52,15 @@ jobs:
           redis://127.0.0.1:6379/1 \
           pics
 
+      - name: Juicefs Mount
+        run: |
+          ./juicefs mount -d redis://127.0.0.1:6379/1 /tmp
+
       - name: Start Juicefs Gateway
         run: |
           export MINIO_ROOT_USER=minadmin
           export MINIO_ROOT_PASSWORD=minadmin
-          nohup ./juicefs gateway redis://localhost:6379 localhost:8000
+          nohup ./juicefs gateway redis://localhost:6379/ localhost:8000
 
       - name: S3Test
         run: |
