add sudo to jfs gateway

--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           export MINIO_ROOT_USER=minioadmin
           export MINIO_ROOT_PASSWORD=minioadmin
-          nohup ./juicefs gateway redis://localhost:6379/1 localhost:8000
+          sudo nohup ./juicefs gateway redis://localhost:6379/1 localhost:8000
 
       - name: S3Test
         run: |
