--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -65,6 +65,7 @@ jobs:
       - name: S3Test
         run: |
           git clone https://github.com/ceph/s3-tests.git
+          sudo apt-get update
           sudo apt-get install python-virtualenv
           cd s3-tests
           ./bootstrap
