--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -38,9 +38,7 @@ jobs:
 
       - name: Juicefs Format
         run: |
-          ./juicefs format \
-          redis://127.0.0.1:6379/1 \
-          pics
+          sudo ./juicefs format redis://127.0.0.1:6379/1 pics
 
       - name: Start Juicefs Gateway
         run: |
