--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -18,10 +18,16 @@ jobs:
         with:
           go-version: '1.16.x'
 
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+          
       - name: Set up Include Headers
         run: |
           mkdir "C:\Program Files (x86)\WinFsp\inc\fuse"
-          copy hack\winfsp_headers\ "C:\Program Files (x86)\WinFsp\inc\fuse"
+          dir
+          copy .\hack\winfsp_headers\ "C:\Program Files (x86)\WinFsp\inc\fuse"
           set CPATH="C:\Program Files (x86)\WinFsp\inc\fuse"
 
       - name: Build Juicefs
