print more info

--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -27,7 +27,9 @@ jobs:
         run: |
           mkdir "C:\WinFsp\inc\fuse"
           copy .\hack\winfsp_headers\ "C:\WinFsp\inc\fuse"
+          dir "C:\WinFsp\inc\fuse"
           set CGO_CFLAGS=-I/C/WinFsp/inc/fuse
+          go env
 
 
       - name: Build Juicefs
