--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -30,7 +30,8 @@ jobs:
           dir "C:\WinFsp\inc\fuse"
           set CGO_CFLAGS=-I/C/WinFsp/inc/fuse
           go env
-
+          go env -w CGO_CFLAGS=-I/C/WinFsp/inc/fuse
+          go env
 
       - name: Build Juicefs
         run: |
