fuse_common.h cannot find

--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Build Juicefs
         run: |
+          go env
           go build -ldflags="-s -w" -o juicefs.exe ./cmd
 
 
