--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -28,7 +28,7 @@ jobs:
           mkdir "C:\WinFsp\inc\fuse"
           copy .\hack\winfsp_headers\* C:\WinFsp\inc\fuse\
           dir "C:\WinFsp\inc\fuse"
-          set CGO_CFLAGS=-I/C/WinFsp/inc/fuse
+          set CGO_CFLAGS=-IC:/WinFsp/inc/fuse
           go env
           go env -w CGO_CFLAGS=-I/C/WinFsp/inc/fuse
           go env
