--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -30,7 +30,7 @@ jobs:
           dir "C:\WinFsp\inc\fuse"
           set CGO_CFLAGS=-IC:/WinFsp/inc/fuse
           go env
-          go env -w CGO_CFLAGS=-I/C/WinFsp/inc/fuse
+          go env -w CGO_CFLAGS=-IC:/WinFsp/inc/fuse
           go env
 
       - name: Build Juicefs
