--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           go-version: '1.16.x'
 
+      - name: Set up Choco
+        run: |
+          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol \
+          = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
+          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+          choco
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
