--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -20,9 +20,7 @@ jobs:
 
       - name: Set up Choco
         run: |
-          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol \
-          = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
-          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           choco
 
       - name: Checkout
